--- a/footer/footer-iven.html
+++ b/footer/footer-iven.html
@@ -3,23 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Footer - Iven</title>
+
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
+
+    <!-- Font Awesome Icon -->
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" />
+    
 </head>
 <body>
 
-    <!-- Footer star -->
-
+    <!-- footer start -->
     <div>
         <p>
-            Copyright&copy; 2024 - Created by
-            <a href="https://github.com/settings/profile">Iven Lagowan</a>
+            Copyright &copy; 2024 - Created by 
+            <a href="https://github.com/IvenLagowan" target="_blank">Iven Lagowan</a>
         </p>
     </div>
-
-
-    <!-- Footer end -->
+    <!-- footer end -->
     
 </body>
 </html>
