feet: tambah footer footer/footer-marthen.html

--- a/footer/footer-marthen.html
+++ b/footer/footer-marthen.html
@@ -18,13 +18,12 @@
 </head>
 <body> 
     <!-- footer strat -->
-        <div>
+    <div>
             <p>
                 Copyright &copy; 2024 - Created by 
-                <a href="https://github.com/tenouye-marten" target="_blank"></a> 
-                Marthen
+                <a href="https://github.com/tenouye-marten" target="_blank">   Marthen</a> 
             </p>
-        </div>
+    </div>
     <!-- footer end -->
 </body>
 </html>
