feat: tambah footer/footermelpen.html

--- a/footer/footer-melpen.html
+++ b/footer/footer-melpen.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foother</title>
+    <title>Footer - Melpen</title>
+
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Font Awesome Icon -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -14,12 +18,13 @@
     />
   </head>
   <body>
-    <!-- foothe -->
+    <!-- footer start -->
     <div>
       <p>
-        Copyrigth &COPY; 2024 Created By
-        <a href="https://github.com/Melpenyogi" target="_blank">Melpen </a>
+        Copyright &copy; 2024 - Created by
+        <a href="https://github.com/Melpenyogi" target="_blank">Melpen</a>
       </p>
     </div>
+    <!-- footer end -->
   </body>
 </html>
