--- a/footer/footer-anjas.html
+++ b/footer/footer-anjas.html
@@ -8,7 +8,7 @@
     <!-- Tailwind Css -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Fontawesome CDN --> 
+    <!-- Fontawesome CDN -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -19,9 +19,36 @@
   </head>
   <body>
     <!-- footer start -->
-    <div>
-      <p>Copyright &copy; 2024 - Created by <a href="https://github.com/anjastabuni" target="_blank">Anjas</a></p>
+    <div class="bg-gray-800">
+      <div class="mx-auto max-w-screen-lg py-4">
+        <p class="text-gray-400 text-xs font-thin">
+          Copyright &copy; 2024 - Created by
+          <a href="https://github.com/anjastabuni" target="_blank" class="hover:text-blue-500 font-bold transition duration:200">Anjas</a>
+        </p>
+      </div>
     </div>
+    <!-- footer end -->
+
+    <!-- footer start -->
+    <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
+      <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="https://github.com/anjastabuni" class="hover:underline">Anjas</a>. Powered by SaCode. </span>
+        <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+          <li>
+            <a href="#" class="hover:underline me-4 md:me-6">About</a>
+          </li>
+          <li>
+            <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+          </li>
+          <li>
+            <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+          </li>
+          <li>
+            <a href="#" class="hover:underline">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <!-- footer end -->
   </body>
 </html>
