--- a/footer/footer-marthen.html
+++ b/footer/footer-marthen.html
@@ -18,12 +18,43 @@
 </head>
 <body> 
     <!-- footer strat -->
-    <div>
-            <p>
+    <div class="bg-gray-800"> 
+        <div class="mx-auto max-w-screen-lg py-4">
+       
+            <p class="text-gray-400 text-xs font-thin">
                 Copyright &copy; 2024 - Created by 
-                <a href="https://github.com/tenouye-marten" target="_blank">   Marthen</a> 
+                <a href="https://github.com/tenouye-marten" target="_blank" class="hover:text-blue-500 font-bold transition duration:200">   Marthen</a> 
             </p>
+
+        </div>
     </div>
     <!-- footer end -->
+
+
+    <!-- footer start -->
+
+    <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
+    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://github.com/tenouye-marten" class="hover:underline">Marthen™</a>. Powered by SaCode.
+    </span>
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+        <li>
+            <a href="#" class="hover:underline me-4 md:me-6">About</a>
+        </li>
+        <li>
+            <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+        </li>
+        <li>
+            <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+        </li>
+        <li>
+            <a href="#" class="hover:underline">Contact</a>
+        </li>
+    </ul>
+    </div>
+    </footer>
+
+    <!-- footer end -->
+
 </body>
 </html>
